@@ -2,6 +2,7 @@ Revision history for ParaSeq
 
 {{$NEXT}}
     - Added optimized ".batch" and tests
+    - Added partially optimized ".rotor" and tests
 
 0.0.6  2024-05-28T20:46:35+02:00
     - Added ".list" coercer
